Use the diaeresis

--- a/endangered-languages.tex
+++ b/endangered-languages.tex
@@ -220,7 +220,7 @@ The reason is that children, as soon as they start using computers for anything 
 Ultimately, Kornai found that the best indicator of a language's digital presence was their EGIDS rating. "The next best set of features indicated the quality of the wikipedia, followed by the number of L1 speakers, the size of the Cr\'ubad\'an crawl, the existence of FLOSS spellcheckers, and the number of online texts listed in OLAC." \citep[6]{kornai2013digital} Overall, only 5\% of the world's languages were seen as digitally ascending; like most results from this field, an increasingly dire statistic. As \citet[10]{kornai2013digital} writes:
 
 \begin{quote}
-Unfortunately, at a practical level heritage projects (including wikipedia incubators) are haphazard, with no systematic programmes of documentation. Resources are often squandered, both in the EU and outside, on feel-good revitalization efforts that make no sense in light of the preexisting functional loss and economic incentives that work against language diversity \citep{ginsburgh2011many}.
+Unfortunately, at a practical level heritage projects (including wikipedia incubators) are haphazard, with no systematic programmes of documentation. Resources are often squandered, both in the EU and outside, on feel-good revitalization efforts that make no sense in light of the pre\"{e}xisting functional loss and economic incentives that work against language diversity \citep{ginsburgh2011many}.
 \end{quote}
 
 However, others have noted that Kornai may have been early in his predictions that most languages will not digitally ascend \citep{gibson2016assessing}.
