Use arara to compile

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,3 +1,9 @@
+% !TEX TS-program = arara
+% arara: pdflatex
+% arara: bibtex
+% arara: pdflatex
+% arara: pdflatex
+
 \documentclass[12pt,a4paper]{article}
 \usepackage{thesiscommands}
 
